# fapiao-shibie

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  InvoiceApp.spec  README.md  build.bat  build.ps1  build_iss.py  installer.iss  installer.nsi  legacy_tkinter.py  publish.bat  pyproject.toml  requirements.txt  ruff.toml  run_legacy.bat  run_pyside6.bat  发票识别工具.py  启动发票识别工具.bat
.claude/: settings.local.json
.github/workflows/: build.yml
InvoiceApp/: __init__.py  __main__.py
InvoiceApp/core/: exporter.py  parser.py  parser_factory.py  parser_normal.py
InvoiceApp/resources/: style.qss
InvoiceApp/ui/: donate_dialog.py  export_dialog.py  main_window.py  pdf_preview.py  resources.py  worker.py
tests/: conftest.py  test_parser.py
