[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "invoice-app"
version = "1.0.0"
description = "数电发票PDF识别导出工具"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "pdfplumber>=0.10",
    "openpyxl>=3.1",
]

[project.scripts]
invoice-app = "InvoiceApp.__main__:main"
